# docs/swagger.json
@@ -15,6 +15,13 @@
                 "summary": "新添加求助",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "Authentication header",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "type": "file",
                         "description": "File to upload",
                         "name": "file",
@@ -30,8 +37,22 @@
                     },
                     {
                         "type": "string",
-                        "description": "time",
-                        "name": "time",
+                        "description": "language",
+                        "name": "language",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "score",
+                        "name": "score",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "createTime",
+                        "name": "createTime",
                         "in": "formData",
                         "required": true
                     }
